--- a/css/css.css
+++ b/css/css.css
@@ -3,13 +3,17 @@
   padding: 0;
 }
 body {
-  width: 100%;
+
   font-family: sans-serif;
 }
 
 /* BLOCK 1 HEADER */
+.wrapper{
+  width: 1160px;
+  margin: 0 auto;
+}
 .header{
-  width: 100%;
+  width: 1160px;
   height: 60px;
   background-color: #ffffff;
   position: fixed;
@@ -17,7 +21,7 @@ body {
 .company-logo{
   float: left;
   height: 60px;
-  width:235px;
+  padding: 0 50px;
   background-color: #D6D4D4;
   margin-left: 130px;
 }
@@ -39,11 +43,11 @@ a.logo{
 width: auto;
 height: 60px;
 float: right;
+position: relative;
 }
 .main-nav{
   list-style: none;
   height: 60px;
-  position: relative;
   margin-right: 200px;
 }
 .main-nav li {
@@ -78,7 +82,7 @@ float: right;
 /* BLOCK 2 CONTEINER TABS */
 .conteiner-tabs{
   width: 100%;
-  height: 510px;
+  height: 440px;
   background-color: #B7B3B3;
 }
 .main-headline{
@@ -106,7 +110,7 @@ width:65%;
 .head-button{
   margin-top:  50px;
 }
-.head-button input{
+.head-button button{
   width: 355px;
   height: 45px;
   color: #fff;
