--- a/css/css.css
+++ b/css/css.css
@@ -1,16 +1,14 @@
-*{
-  margin: 0;
-  padding: 0;
-}
-body {
 
+body {
   font-family: sans-serif;
+  margin:0;
 }
 
 /* BLOCK 1 HEADER */
 .head-wrap{
   width: 100%;
   height: 60px;
+  background-color: #ffffff;
 }
 .header{
   width: 1160px;
@@ -21,7 +19,7 @@ body {
 .company-logo{
   float: left;
   height: 60px;
-  padding: 0 50px;
+  width:250px;
   background-color: #D6D4D4;
   margin-left: 130px;
 }
@@ -47,12 +45,12 @@ position: relative;
 }
 .main-nav{
   list-style: none;
-  height: 60px;
+  height: auto;
   margin-right: 200px;
 }
 .main-nav li {
   display: inline-block;
-  padding-top: 20px;
+  margin-top: 5px;
 }
 
 .main-nav li a{
@@ -60,7 +58,6 @@ position: relative;
   line-height: 20px;
   color: #727576;
   margin-left: 50px;
-  padding-top: 20px;
   text-decoration: none;
   text-align: center;
 }
@@ -93,8 +90,8 @@ position: relative;
 }
 .main-headline{
 float: left;
-margin-left: ;
 width:65%;
+height: 380px;
 }
  .head-line{
   margin-top: 80px;
@@ -128,6 +125,7 @@ width:65%;
 .big-img{
 float: right;
 width: 35%;
+margin: auto;
 }
 .big-img img{
   max-width: 100%;
